--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -137,12 +137,12 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{participants.}{%
 \subsection{Participants.}\label{participants.}}
 
-The experiments (except experiment 3b) reported in the current study were first conducted between 2014 to 2016 in Tsinghua University, Beijing, participants of these experiments were recruited in Tsinghua University community. To increase the power by adding collecting more data so that each experiment has 50 or more valid data (Simmons, Nelson, \& Simonsohn, 2013) , we recruited additional participants in Wenzhou University, Wenzhou, China in 2017. However, duo to the limited time and resources, additional data were not collected for experiment 2, 3, and 4b.
+The experiments (except experiment 3b) reported in the current study were first conducted between 2014 to 2016 in Tsinghua University, Beijing, participants of these experiments were recruited in Tsinghua University community. To increase the power by adding collecting more data so that each experiment has 50 or more valid data (Simmons, Nelson, \& Simonsohn, 2013) , we recruited additional participants in Wenzhou University, Wenzhou, China in 2017. However, due to the limited time and resources, additional data were collected for experiment 1a, 1b, 4a, and 4b, but not other experiments. We report all the variables measured in our experiment.
 
 \hypertarget{material-and-procedure}{%
 \subsection{Material and Procedure}\label{material-and-procedure}}
 
-In the current study, we used the social associative learning paradigm (Sui, He, \& Humphreys, 2012), in which participants first learn the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After learning phase, participants finish a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label were matched. When participants can get 60\% or higher accuracy at the end of the practicing session, they can start the experimental task which is the same as in the practice phase.
+In the current study, we used the social associative learning paradigm (or a variant of the self-tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learn the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After learning phase, participants finish a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label were matched. When participants can get 60\% or higher accuracy at the end of the practicing session, they can start the experimental task which is the same as in the practice phase.
 
 If not noted, E-prime 2.0 was used in all experiments. For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors, with a chin-rest brace. The visual angle of geometric shapes was about 3.7º × 3.7º, the finxation cross is of (0.8º × 0.8º of visual angle) at the center of the screen. The words were of 3.6º × 1.6º visual angle. The distance between the center of the shape or the word and the fixation cross was 3.5º of visual angle. Participant fixed their head on a chin-fixation, about 60 cm from the screen.
 
@@ -258,8 +258,8 @@ Data was analyzed as in experiment 1a.
 
 Figure \ref{fig:ex1b-dprime-rt} shows \emph{d} prime and reaction times of experiment 1b.
 
-\hypertarget{analaysis-of-d-prime.}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.}}
+\hypertarget{d-prime-1}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
 
 Repeated measures ANOVA revealed main effect of valence, \(F(2, 102) = 14.98\), \(\mathit{MSE} = 0.16\), \(p < .001\), \(\hat{\eta}^2_G = .053\). Paired t test showed that the Good-Person condition (1.87 \(\pm\) 0.102) was with greater \emph{d} prime than Netural condition (1.44 \(\pm\) 0.101, \emph{t}(51) = 5.945, \emph{p} \textless{} 0.001). We also found that the Bad-Person condition (1.67 \(\pm\) 0.11) has also greater \emph{d} prime than neutral condition , \emph{t}(51) = 3.132, \emph{p} = 0.008). There Good-person condition was also slightly greater than the bad conidition, \emph{t}(51) = 2.265, \emph{p} = 0.0701.
 
@@ -417,8 +417,8 @@ Data analysis followed strategies described in the general method section. React
 
 Figure \ref{fig:ex3a-dprime-rt} shows \emph{d} prime and reaction times of experiment 3a. Less than 5\% correct trials with less than 200ms reaction times were exlucded.
 
-\hypertarget{d-prime-1}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
+\hypertarget{d-prime-2}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
 
 There was evidence for the main effect of valence, \(F(2, 68) = 11.09\), \(\mathit{MSE} = 0.22\), \(p < .001\), \(\hat{\eta}^2_G = .039\), and main effect of self-relevance, \(F(1, 34) = 3.22\), \(\mathit{MSE} = 0.54\), \(p = .082\), \(\hat{\eta}^2_G = .015\), as well as the interaction, \(F(2, 68) = 3.39\), \(\mathit{MSE} = 0.38\), \(p = .039\), \(\hat{\eta}^2_G = .022\).
 
@@ -429,7 +429,7 @@ We then conducted separated ANOVA for self-referential and other-referential tri
 
 We found intercation between Matchness and Valence (\(F(1.98, 67.44) = 26.29\), \(\mathit{MSE} = 730.09\), \(p < .001\), \(\hat{\eta}^2_G = .025\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
 
-For the matched trials, we found that the interaction between identity and valence, \(F(1.72, 58.61) = 3.89\), \(\mathit{MSE} = 2,750.19\), \(p = .032\), \(\hat{\eta}^2_G = .019\), as well as the main effect of valence \(F(1.98, 67.34) = 35.76\), \(\mathit{MSE} = 1,127.25\), \(p < .001\), \(\hat{\eta}^2_G = .079\), but not the effect of identity \(F(1, 34) = 0.20\), \(\mathit{MSE} = 3,507.14\), \(p = .660\), \(\hat{\eta}^2_G = .001\). As for the d prime, we separated analyzed the self-referential and other-referential trials. For the Self-referential trials, we found the main effect of valence, \(F(1.8, 61.09) = 30.39\), \(\mathit{MSE} = 1,584.53\), \(p < .001\), \(\hat{\eta}^2_G = .159\); for the other-referential trials, the effect of valence is weaker, \(F(1.86, 63.08) = 2.85\), \(\mathit{MSE} = 2,224.30\), \(p = .069\), \(\hat{\eta}^2_G = .024\). We then focused on the self conditions: the good-self condition (713 \(\pm\) 12) is faster than neutral- (776 \(\pm\) 11.8), \emph{t}(34) = -7.396, \emph{p} \textless{} .0001 , and bad-self (772 \(\pm\) 10.1) conditions, \emph{t}(34) = -5.66, \emph{p} \textless{} .0001. But there is not difference between neutral- and bad-self conditions, \emph{t}(34) = 0.481, \emph{p} = 0.881.
+For the matched trials, we found that the interaction between identity and valence, \(F(1.72, 58.61) = 3.89\), \(\mathit{MSE} = 2,750.19\), \(p = .032\), \(\hat{\eta}^2_G = .019\), as well as the main effect of valence \(F(1.98, 67.34) = 35.76\), \(\mathit{MSE} = 1,127.25\), \(p < .001\), \(\hat{\eta}^2_G = .079\), but not the effect of identity \(F(1, 34) = 0.20\), \(\mathit{MSE} = 3,507.14\), \(p = .660\), \(\hat{\eta}^2_G = .001\). As for the \emph{d} prime, we separated analyzed the self-referential and other-referential trials. For the Self-referential trials, we found the main effect of valence, \(F(1.8, 61.09) = 30.39\), \(\mathit{MSE} = 1,584.53\), \(p < .001\), \(\hat{\eta}^2_G = .159\); for the other-referential trials, the effect of valence is weaker, \(F(1.86, 63.08) = 2.85\), \(\mathit{MSE} = 2,224.30\), \(p = .069\), \(\hat{\eta}^2_G = .024\). We then focused on the self conditions: the good-self condition (713 \(\pm\) 12) is faster than neutral- (776 \(\pm\) 11.8), \emph{t}(34) = -7.396, \emph{p} \textless{} .0001 , and bad-self (772 \(\pm\) 10.1) conditions, \emph{t}(34) = -5.66, \emph{p} \textless{} .0001. But there is not difference between neutral- and bad-self conditions, \emph{t}(34) = 0.481, \emph{p} = 0.881.
 
 For the mismatched trials, we didn't found any strong effect: identity, \(F(1, 34) = 3.43\), \(\mathit{MSE} = 660.02\), \(p = .073\), \(\hat{\eta}^2_G = .004\), valence \(F(1.89, 64.33) = 0.40\), \(\mathit{MSE} = 444.10\), \(p = .661\), \(\hat{\eta}^2_G = .001\), or interaction between the two \(F(1.94, 66.02) = 2.42\), \(\mathit{MSE} = 817.35\), \(p = .099\), \(\hat{\eta}^2_G = .007\).
 
@@ -467,28 +467,33 @@ Data analysis is the same as study 3a.
 \hypertarget{results-5}{%
 \subsection{Results}\label{results-5}}
 
-\hypertarget{analysis-of-d-prime.}{%
-\subsubsection{\texorpdfstring{Analysis of \emph{d} prime.}{Analysis of d prime.}}\label{analysis-of-d-prime.}}
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex3b-dprime-rt-1.pdf}
+\caption{\label{fig:ex3b-dprime-rt}RT and \emph{d} prime of Experiment 3b.}
+\end{figure}
 
-There was evidence for the main effect of valence, \(F(2, 110) = 5.29\), \(\mathit{MSE} = 0.26\), \(p = .006\), \(\hat{\eta}^2_G = .011\), and main effect of self-relevance, \(F(1, 55) = 5.07\), \(\mathit{MSE} = 0.88\), \(p = .028\), \(\hat{\eta}^2_G = .019\), as well as the intercation, \(F(2, 110) = 16.18\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .033\).
+Figure \ref{fig:ex3b-dprime-rt} shows \emph{d} prime and reaction times of experiment 3a. Less than 5\% correct trials with less than 200ms reaction times were exlucded.
 
-We conducted two repeated measures ANOVA for self and other condition separately. For the results from self-condition aligned with previous experiments, showed an main effect of moral valence on \emph{d'}: \(F(2, 110) = 18.32\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .090\). Simple effect analysis showed that the d' was larger for good self (2.23 ± 0.81) than for bad self (1.66 ± 0.74), \emph{t}(55) = 6.11, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.817, 95\% CI {[}0.511 1.117{]} , BF10 = 8.43, and neutral self (1.91 ± 0.66), \emph{t}(55) = 3.03, \emph{p} = 0.0038, Cohen's \emph{d} = 0.404, 95\%CI {[}0.13 0.675{]} , BF10 = 1.33e+5. There was also higher d' for neutral-self condition than bad-self conditions, \emph{t}(34) = 3.02, \emph{p} = 0.0039, Cohen's \emph{d} = 0.403, 95\% CI {[}0.129 0.674{]}, BF10 = 8.22.
+\hypertarget{d-prime-3}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
 
-For the stranger condition, there was no strong evidence for the effect of the morality of the association on d', \(F(2, 110) = 3.26\), \(\mathit{MSE} = 0.26\), \(p = .042\), \(\hat{\eta}^2_G = .011\).
+There was evidence for the main effect of valence, \(F(2, 110) = 5.29\), \(\mathit{MSE} = 0.26\), \(p = .006\), \(\hat{\eta}^2_G = .011\), and main effect of self-relevance, \(F(1, 55) = 5.07\), \(\mathit{MSE} = 0.88\), \(p = .028\), \(\hat{\eta}^2_G = .019\), as well as the intercation, \(F(2, 110) = 16.18\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .033\). Therefore we conducted repeated measure ANOVA for self and other conditions separately. We found the valence effect for self-referential condition (\(F(2, 110) = 18.32\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .090\)) and other-referential condition (\(F(2, 110) = 3.26\), \(\mathit{MSE} = 0.26\), \(p = .042\), \(\hat{\eta}^2_G = .011\)). Post-hoc comparison for the self-referential conditions revealed that \emph{d}' was larger for good self (2.23 \(\pm\) 0.1087) than for bad self (1.66 \(\pm\) 0.098), \emph{t}(55) = 6.11, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = 0.817, 95\% CI {[}0.511 1.117{]} , BF10 = 8.43, and neutral self (1.91 \(\pm\) 0.088), \emph{t}(55) = 3.03, \emph{p} = 0.0104, Cohen's \emph{d} = 0.404, 95\%CI {[}0.13 0.675{]} , BF10 = 1.33e+5. There was also higher d' for neutral-self condition than bad-self conditions, \emph{t}(55) = 3.02, \emph{p} = 0.0106, Cohen's \emph{d} = 0.403, 95\% CI {[}0.129 0.674{]}, BF10 = 8.22. For other-referential conditions, good-other (2.03 \(\pm\) 0.12) was smaller than neutral-other (2.28 \(\pm\) 0.133), \emph{t}(55) = -2.262, \emph{p} = 0.0699, but not the bad-other condition (2.19 \(\pm\) 0.122), \emph{t}(55) = -1.559, \emph{p} = 0.272. Neither evidence for the neutral and bad-other condition \emph{t}(55) = 1.11, \emph{p} = 0.51.
 
-We also tested the effect of personal association by comparing \emph{d'} values for difference moral valence level. The results showed that the bad-self association condition was responded worse than the bad-stranger association condition (2.18 ± 0.911), \emph{t}(55) = -4.1, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.548, 95\% CI {[}-0.827 -0.265{]}, BF10 = 167. The neutral-self was also worse than the neutral-stranger (2.28 ± 1), \emph{t}(55) = -3.15, \emph{p} = 0.0026 , Cohen's \emph{d} = -0.422, 95\% CI {[}-0.693 -0.146{]}, BF10 = 11.7. While the good-self association condition and good-stranger conditions (2.03 ± 0.89) are not differ from each other, \emph{t}(55) = 1.394, \emph{p} = 0.169, Cohen's \emph{d} = 0.186, 95\% CI{[}-0.079 0.449{]}, BF10 = 0.364.
+We also tested the effect of personal association by comparing \emph{d'} values for difference moral valence level. The results showed that the bad-self association condition was responded worse than the bad-other association condition, \emph{t}(55) = -4.1, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.548, 95\% CI {[}-0.827 -0.265{]}, BF10 = 167. The neutral-self was also worse than the neutral-other, \emph{t}(55) = -3.15, \emph{p} = 0.0026 , Cohen's \emph{d} = -0.422, 95\% CI {[}-0.693 -0.146{]}, BF10 = 11.7. While the good-self association condition and good-stranger conditions are not differ from each other, \emph{t}(55) = 1.394, \emph{p} = 0.169, Cohen's \emph{d} = 0.186, 95\% CI{[}-0.079 0.449{]}, BF10 = 0.364.
 
-\hypertarget{analaysis-of-reaction-time.}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
+\hypertarget{reaction-time-4}{%
+\subsubsection{Reaction time}\label{reaction-time-4}}
 
-The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data. We found three-way intercation between matchness, and valence (\(F(1.99, 109.63) = 55.67\), \(\mathit{MSE} = 4,203.96\), \(p < .001\), \(\hat{\eta}^2_G = .032\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
 
-We found three-way intercation between matchness, and valence (\(F(1.99, 109.63) = 55.67\), \(\mathit{MSE} = 4,203.96\), \(p < .001\), \(\hat{\eta}^2_G = .032\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
+For the matched trials, we found that interaction between of valence and identity, \(F(1.67, 92.11) = 6.14\), \(\mathit{MSE} = 6,472.48\), \(p = .005\), \(\hat{\eta}^2_G = .009\), BF10 = 1.17. Then, the matched trials were analyzed for the self-relevance and other-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, \(F(1.66, 91.38) = 23.98\), \(\mathit{MSE} = 6,965.61\), \(p < .001\), \(\hat{\eta}^2_G = .100\), BF10 = 4.54e+6. Paired \emph{t}-tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), \emph{t}(55) = -8.78, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -1.173, 95\% CI {[}-1.511 -0.828{]}, BF10 = 1.84e+9, and to neutral-self association (880 ± 116), \emph{t}(55) = 3.748, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = -0.501, 95\% CI {[}-0.777 -0.221{]}, BF10 = 58.7. The neutral-self was faster than the bad-self associations, \emph{t}(55) = -2.41, \emph{p} = 0.019 , Cohen's \emph{d} = -0.321, 95\% CI {[}-0.589 -0.051{]}, BF10 = 2.03.
 
-For the matched trials, we found that interaction between of valence and identity, \(F(1.67, 92.11) = 6.14\), \(\mathit{MSE} = 6,472.48\), \(p = .005\), \(\hat{\eta}^2_G = .009\), BF10 = 1.17. Then, the matched trials were analyzed for the self-relevance and stranger-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, \(F(1.66, 91.38) = 23.98\), \(\mathit{MSE} = 6,965.61\), \(p < .001\), \(\hat{\eta}^2_G = .100\), BF10 = 4.54e+6. Paired \emph{t}-tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), \emph{t}(55) = -8.78, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -1.173, 95\% CI {[}-1.511 -0.828{]}, BF10 = 1.84e+9, and to neutral-self association (880 ± 116), \emph{t}(55) = 3.748, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = -0.501, 95\% CI {[}-0.777 -0.221{]}, BF10 = 58.7. The neutral-self was faster than the bad-self associations, \emph{t}(55) = -2.41, \emph{p} = 0.019 , Cohen's \emph{d} = -0.321, 95\% CI {[}-0.589 -0.051{]}, BF10 = 2.03.
-The effect of moral valence was also significant for the stranger-relevance conditions, \(F(1.89, 103.94) = 5.96\), \(\mathit{MSE} = 5,589.90\), \(p = .004\), \(\hat{\eta}^2_G = .014\), BF10 = 8.55. the good-other condition (734 ± 158) didn't differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen's \emph{d} = -0.009, 95\% CI {[}-0.271 -0.293{]}, BF10 = 0.15, but faster than the bad other condition (776 ± 173), \emph{t}(55) = -3.14, \emph{p} = 0.0027, Cohen's \emph{d} = -0.419, 95\% CI {[}-0.691 -0.144{]}, BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, \emph{t}(55) = -3.232, \emph{p} = 0.0021, Cohen's \emph{d} = -0.432, 95\% CI {[}-0.704 -0.156{]}, BF10 = 14.3.
+The effect of moral valence was also significant for the other-relevance conditions, \(F(1.89, 103.94) = 5.96\), \(\mathit{MSE} = 5,589.90\), \(p = .004\), \(\hat{\eta}^2_G = .014\), BF10 = 8.55. the good-other condition (734 ± 158) didn't differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen's \emph{d} = -0.009, 95\% CI {[}-0.271 -0.293{]}, BF10 = 0.15, but faster than the bad other condition (776 ± 173), \emph{t}(55) = -3.14, \emph{p} = 0.0027, Cohen's \emph{d} = -0.419, 95\% CI {[}-0.691 -0.144{]}, BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, \emph{t}(55) = -3.232, \emph{p} = 0.0021, Cohen's \emph{d} = -0.432, 95\% CI {[}-0.704 -0.156{]}, BF10 = 14.3.
 
 We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self vs.~good-stranger, \emph{t}(55) = 4.29, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.573, 95\% CI {[}0.288 0.854{]}, BF10 = 297.2; neutral-self vs.~neutral -stranger, \emph{t}(55) = 7.17, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.958, 95\% CI {[}0.638 1.272{]}), BF10 = 5.77e+6; bad-self vs.~bad-other, \emph{t}(55) = 6.03, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.806, 95\% CI {[}0.5 1.11{]}, BF10 = 100208.03.
+
+For the mismacthed trials, we also found interaction between of valence and identity, \(F(1.84, 100.94) = 35.20\), \(\mathit{MSE} = 2,879.80\), \(p < .001\), \(\hat{\eta}^2_G = .026\). Further analysis showed that there was effect of valence for other-referential trials (\(F(1.79, 98.63) = 62.42\), \(\mathit{MSE} = 3,489.92\), \(p < .001\), \(\hat{\eta}^2_G = .077\)) but not for the self-referential trials (\(F(1.84, 101.38) = 0.66\), \(\mathit{MSE} = 2,283.19\), \(p = .508\), \(\hat{\eta}^2_G = .001\)). Post-hoc comparison revealed that bad-other trials (857 \(\pm\) 20.9) were responded faster than good (967 \(\pm\) 25.1), \emph{t} = -9.625, \emph{p} \textless{} 0.0001, and neutral (876 \(\pm\) 21.4) trials, \emph{t} = -2.263, \emph{p} = 0.697, good-other conditions were also slower than neutral-other, \emph{t} = -8.016, \emph{p} \textless{} 0.0001
 
 \hypertarget{discussion-3}{%
 \subsection{Discussion}\label{discussion-3}}
@@ -615,8 +620,8 @@ The data were analyzed as in experiment 4a.
 \hypertarget{results-7}{%
 \subsection{Results}\label{results-7}}
 
-\hypertarget{d-prime-2}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
+\hypertarget{d-prime-4}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-4}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of valence (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\hat{\eta}^2_G = .010\)), or identity, \(F(1, 44) = 0.00\), \(\mathit{MSE} = 0.08\), \(p = .994\), \(\hat{\eta}^2_G = .000\), or their interactions, \(F(1.96, 86.41) = 0.53\), \(\mathit{MSE} = 0.10\), \(p = .585\), \(\hat{\eta}^2_G = .001\).
 
@@ -668,8 +673,8 @@ Participants finish 4 session of experiment, and each include one experiment as 
 \hypertarget{results-8}{%
 \subsection{Results}\label{results-8}}
 
-\hypertarget{d-prime-3}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
+\hypertarget{d-prime-5}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-5}}
 
 We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (\(F(2.95, 108.97) = 1.18\), \(\mathit{MSE} = 0.76\), \(p = .321\), \(\hat{\eta}^2_G = .006\)), but revealed effect of valence, \(F(1.85, 68.49) = 29.70\), \(\mathit{MSE} = 0.29\), \(p < .001\), \(\hat{\eta}^2_G = .034\), and their interactions, \(F(4.68, 173.09) = 5.85\), \(\mathit{MSE} = 0.31\), \(p < .001\), \(\hat{\eta}^2_G = .019\).
 
@@ -681,8 +686,8 @@ For the person appearance, the main effect of valence is significant, \(F(1.73, 
 
 For scene appearance, the main effect of valence is significnat \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\). Post-hoc analysis revealed the same pattern as in person task: good condition (2.23, se = 0.156) is higher than both neutral (1.57, se = 0.178, \emph{t}(37) =4.683, \emph{p} = 0.0001) and bad (1.77, se = 0.148, \emph{t}(37) = 3.414, \emph{p} = 0.0044), but neutral and bad conditions are not different (\emph{t}(37) = -1.893, \emph{p} = 0.1549)
 
-\hypertarget{reaction-time-4}{%
-\subsubsection{Reaction time}\label{reaction-time-4}}
+\hypertarget{reaction-time-5}{%
+\subsubsection{Reaction time}\label{reaction-time-5}}
 
 As in previous experiment, we focused our analysis on the matched trials. We conducted 4 (task type: morality, emotion, beauty of person, beauty of scene) by 3 (Valence: good, neutral, bad) repeated measure ANOVA for matched trials only.
 
@@ -731,13 +736,13 @@ All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-prim
 
 Only the behavioral results were reported here.
 
-\hypertarget{d-prime-4}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-4}}
+\hypertarget{d-prime-6}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-6}}
 
 We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.73, 41.45) = 4.63\), \(\mathit{MSE} = 0.10\), \(p = .019\), \(\hat{\eta}^2_G = .025\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
 
-\hypertarget{analaysis-of-reaction-time.-1}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
+\hypertarget{analaysis-of-reaction-time.}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
@@ -783,8 +788,8 @@ Only the behavioral results were reported here.
 \hypertarget{day-one}{%
 \subsubsection{Day one}\label{day-one}}
 
-\hypertarget{d-prime-5}{%
-\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-5}}
+\hypertarget{d-prime-7}{%
+\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-7}}
 
 There was evidence for the interaction between identity and valence, \(F(2, 42) = 12.88\), \(\mathit{MSE} = 0.13\), \(p < .001\), \(\hat{\eta}^2_G = .041\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 29.31\), \(\mathit{MSE} = 0.12\), \(p < .001\), \(\hat{\eta}^2_G = .147\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.199) is better than both neutral-self (1.98, SE = 0.151), \emph{t}(21) = 5.984, \emph{p} \textless{} 0.001, and bad-self condition (2.07, SE = 0.154), \emph{t}(21) = 6.555, \emph{p} \textless{} 0.001. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -1.059, \emph{p} = 0.549. For other trials, there was no significant effect of valuence, \(F(2, 42) = 0.00\), \(\mathit{MSE} = 0.16\), \(p = .999\), \(\hat{\eta}^2_G = .000\).
 
@@ -796,8 +801,8 @@ For the matched trials, there was interaction between identity and valence, \(F(
 \hypertarget{day-two}{%
 \subsubsection{Day two}\label{day-two}}
 
-\hypertarget{d-prime-6}{%
-\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-6}}
+\hypertarget{d-prime-8}{%
+\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-8}}
 
 There was evidence for the interaction between identity and valence, \(F(2, 42) = 3.86\), \(\mathit{MSE} = 0.08\), \(p = .029\), \(\hat{\eta}^2_G = .005\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 7.35\), \(\mathit{MSE} = 0.08\), \(p = .002\), \(\hat{\eta}^2_G = .021\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.214) is better than both neutral-self (2.43, SE = 0.175), \emph{t}(21) = 2.98, \emph{p} = 0.0189, and bad-self condition (2.43, SE = 0.199), \emph{t}(21) = 3.93, \emph{p} = 0.0021. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -0.097, \emph{p} = 0.995. For other trials, there was no significant effect of valuence, \(F(2, 42) = 1.46\), \(\mathit{MSE} = 0.09\), \(p = .245\), \(\hat{\eta}^2_G = .004\).
 
